@startuml

title __SIGNUP's Class Diagram__\n

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace signUp {
        class com.gmail.ib.projectCrypt.ui.signUp.SignUpScreen {
            + SignUpScreen()
            + form()
            - buildUI()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace signUp {
        class com.gmail.ib.projectCrypt.ui.signUp.userControl {
            + createUser()
        }
      }
    }
  }
  

  com.gmail.ib.projectCrypt.ui.signUp.SignUpScreen -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.gmail.ib.projectCrypt.ui.signUp.SignUpScreen o-- com.gmail.ib.projectCrypt.authentication.AccessControl : accessControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
